# rag-ba

./: .env.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  DATA_CONTRACTS.md  Makefile  README.md  TROUBLESHOOTING.md  pyproject.toml
apps/rag-ba-ocr/: build_canonical_doc.py  build_chunks.py  docx_to_full_documents.py  export_full_document.py  ocr_regions copy.py  ocr_regions.py  ocr_regions_10pages.py  pyproject.toml  query_test.py
apps/rag-ba-ocr/deprecated_files/: ocr_from_layout.py  ocr_page_test.py
apps/rag-ba-ocr/src/: __init__.py
apps/rag-ba-ocr/src/common/: __init__.py  project_paths.py
apps/rag-ba-ocr/src/ingestion/: __init__.py  build_canonical_doc.py
apps/rag-ba-ocr/src/pipeline/: __init__.py  build_chunks.py  docx_to_full_documents.py  export_full_document.py  ocr_regions.py
derpecated_files/: doctr_full_document_test.py  doctr_inspect_lines.py  doctr_split_lines.py  doctr_split_lines_with_gutter.py  layout_export_page1.py  pdf_layout_segmented.py  pdf_loader.py  pdf_loader_layout.py  pdf_loader_paragraphs.py  query_vector_index.py  table_region_detection.py  test_doctr_layout.py  test_layout_detection.py  test_pdf_ingest.py  test_pdf_layout.py  test_pdf_paragraphs.py  test_pdf_segmented.py  visualize_layout_page1.py
rag_ba/web/: AGENTS.md  DATA_CONTRACTS.md  __main__.py  app.py  chat_store.py  schemas.py
rag_ba/web/static/: app.js
rag_ba/web/templates/: index.html
scripts/: rag_chat_probe.py
src/app/: chat_cli.py  rag_chat_backend.py  rag_chat_backend_overpromted.py  smoke_check.py
src/common/: __init__.py  project_paths.py
src/index/: build_vector_index_from_chunks.py  citations.py  health_check.py  test_query_with_citations.py
src/ingestion/: layout_export_and_viz_10pages.py  layout_export_and_viz_pdf.py
tests/: test_citations.py  test_project_paths.py  test_web_api.py  test_web_chat_store.py
